<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20dp"
        android:textColor="#FEFFFE"
        android:textStyle="bold"
        android:padding="10dp"
        android:background="#29B318"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#252627">
        <TextView
            android:id="@+id/d_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="#FFFFFF"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <ImageView
                android:id="@+id/d_movie_image"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:textColor="#F64C55"
                            android:text="@string/subtitle"
                            android:layout_marginRight="10dp"/>
                        <TextView
                            android:id="@+id/d_subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FFFFFF"
                            android:textSize="15dp"
                            android:maxLines="2"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:textColor="#F64C55"
                            android:text="@string/user_rating"
                            android:layout_marginRight="10dp"/>
                        <TextView
                            android:id="@+id/d_user_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FFFFFF"
                            android:textSize="15dp"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:textColor="#F64C55"
                            android:text="@string/pub_date"
                            android:layout_marginRight="10dp"/>
                        <TextView
                            android:id="@+id/d_pub_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FFFFFF"
                            android:textSize="15dp"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:textColor="#F64C55"
                            android:text="@string/director"
                            android:layout_marginRight="10dp"/>
                        <TextView
                            android:id="@+id/d_director"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FFFFFF"
                            android:textSize="15dp"
                            android:maxLines="1"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:textColor="#F64C55"
                            android:text="@string/actor"
                            android:layout_marginRight="10dp"/>
                        <TextView
                            android:id="@+id/d_actor"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textColor="#FFFFFF"
                            android:textSize="15dp"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#252627"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blog_search_result"
            android:textSize="20dp"
            android:textColor="#F64C55"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/d_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_empty_view"
            android:visibility="gone"
            android:layout_gravity="center"
            android:gravity="center"/>
        <ListView
            android:id="@+id/d_blog_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="#F1EDEC"
            android:padding="5dp"/>
        <ProgressBar
            android:id="@+id/d_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>