<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"  tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#FEFFFE">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20dp"
        android:textColor="#FEFFFE"
        android:textStyle="bold"
        android:padding="10dp"
        android:background="#29B318"/>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/search_bar"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:maxLines="1"
                android:background="@drawable/edit_text_style"/>
            <ImageButton
                android:id="@+id/clear_button"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/ic_clear_white_24dp"
                android:background="#29B318"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/search_button"
                android:layout_height="match_parent"
                android:layout_width="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/search_button"
                android:textSize="20dp"
                android:background="#29B318"
                android:textColor="#FEFFFE"
                android:textStyle="bold"
                android:onClick="onClick"/>
        </LinearLayout>
        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/s_empty_view"
            android:visibility="gone"
            android:layout_gravity="center"
            android:gravity="center"/>
        <ListView
            android:id="@+id/movie_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">
        </ListView>
        <ProgressBar
            android:id="@+id/movie_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>
